help: Fix formatting on stream-permissions table legend.
This is a bit hacky, but it avoids the legend being weirdly
misaligned.

Fixes #18062.

--- a/static/styles/portico/markdown.css
+++ b/static/styles/portico/markdown.css
@@ -86,6 +86,22 @@
         text-align: center;
     }
 
+    .legend_symbol {
+        position: absolute;
+        left: calc(40px);
+        transform: translateX(-50%);
+
+        /* Adjust for 50px closed left sidebar state */
+        @media (width <= 800px) {
+            left: calc(5% + 50px);
+        }
+    }
+
+    .legend_label {
+        position: relative;
+        left: calc(30px);
+    }
+
     ul,
     ol {
         margin-left: 30px;
